# bc-crawl-getLedger

./: .gitignore  Cargo.toml  README.md  blocks.genesis.json  loop.sh  reverse.sh
src/: bcblocks.rs  bcfile.rs  bcnet.rs  bcparse.rs  bcpeers.rs  bcutils.rs  main.rs
src/bcnet/: bcmessage.rs
src/bcscript/: interpret.rs  mod.rs  opcodes.rs  parse.rs  public_key.rs  script.rs
