[package]
name = "bc-crawl"
version = "0.1.0"
authors = ["Jazmina"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jemalloc-ctl="0.5.0"
jemallocator="0.5.0"
chan = "0.1.23"
trust-dns-resolver = "0.21.2"
lazy_static = "1.4.0"
hex = "0.4.3"
chrono = "0.4.19"
sha2 = "0.8.1" # Upgrade impossible
bitcoin_hashes = "0.11.0"
fs_extra = "1.2.0"
serde = { version = "1.0.137", features = ["derive"] }
linecount = "0.1.0"
serde_json = "1.0.81"
rand = "0.8.5"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
pad = "*"
tabled = "0.7.0"
colored = "2.0.0"
term_size = "0.3.2"
byteorder = "1"
indoc = "1.0"
libsecp256k1 = "0.7.1"
